// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tarballs api 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/auth/decoders/auth0.d.ts",
  "➤ YN0000: dist/auth/decoders/auth0.d.ts.map",
  "➤ YN0000: dist/auth/decoders/auth0.js",
  "➤ YN0000: dist/auth/decoders/azureActiveDirectory.d.ts",
  "➤ YN0000: dist/auth/decoders/azureActiveDirectory.d.ts.map",
  "➤ YN0000: dist/auth/decoders/azureActiveDirectory.js",
  "➤ YN0000: dist/auth/decoders/clerk.d.ts",
  "➤ YN0000: dist/auth/decoders/clerk.d.ts.map",
  "➤ YN0000: dist/auth/decoders/clerk.js",
  "➤ YN0000: dist/auth/decoders/custom.d.ts",
  "➤ YN0000: dist/auth/decoders/custom.d.ts.map",
  "➤ YN0000: dist/auth/decoders/custom.js",
  "➤ YN0000: dist/auth/decoders/dbAuth.d.ts",
  "➤ YN0000: dist/auth/decoders/dbAuth.d.ts.map",
  "➤ YN0000: dist/auth/decoders/dbAuth.js",
  "➤ YN0000: dist/auth/decoders/ethereum.d.ts",
  "➤ YN0000: dist/auth/decoders/ethereum.d.ts.map",
  "➤ YN0000: dist/auth/decoders/ethereum.js",
  "➤ YN0000: dist/auth/decoders/firebase.d.ts",
  "➤ YN0000: dist/auth/decoders/firebase.d.ts.map",
  "➤ YN0000: dist/auth/decoders/firebase.js",
  "➤ YN0000: dist/auth/decoders/index.d.ts",
  "➤ YN0000: dist/auth/decoders/index.d.ts.map",
  "➤ YN0000: dist/auth/decoders/index.js",
  "➤ YN0000: dist/auth/decoders/magicLink.d.ts",
  "➤ YN0000: dist/auth/decoders/magicLink.d.ts.map",
  "➤ YN0000: dist/auth/decoders/magicLink.js",
  "➤ YN0000: dist/auth/decoders/netlify.d.ts",
  "➤ YN0000: dist/auth/decoders/netlify.d.ts.map",
  "➤ YN0000: dist/auth/decoders/netlify.js",
  "➤ YN0000: dist/auth/decoders/nhost.d.ts",
  "➤ YN0000: dist/auth/decoders/nhost.d.ts.map",
  "➤ YN0000: dist/auth/decoders/nhost.js",
  "➤ YN0000: dist/auth/decoders/supabase.d.ts",
  "➤ YN0000: dist/auth/decoders/supabase.d.ts.map",
  "➤ YN0000: dist/auth/decoders/supabase.js",
  "➤ YN0000: dist/auth/decoders/supertokens.d.ts",
  "➤ YN0000: dist/auth/decoders/supertokens.d.ts.map",
  "➤ YN0000: dist/auth/decoders/supertokens.js",
  "➤ YN0000: dist/auth/index.d.ts",
  "➤ YN0000: dist/auth/index.d.ts.map",
  "➤ YN0000: dist/auth/index.js",
  "➤ YN0000: dist/auth/parseJWT.d.ts",
  "➤ YN0000: dist/auth/parseJWT.d.ts.map",
  "➤ YN0000: dist/auth/parseJWT.js",
  "➤ YN0000: dist/auth/verifiers/common.d.ts",
  "➤ YN0000: dist/auth/verifiers/common.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/common.js",
  "➤ YN0000: dist/auth/verifiers/index.d.ts",
  "➤ YN0000: dist/auth/verifiers/index.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/index.js",
  "➤ YN0000: dist/auth/verifiers/jwtVerifier.d.ts",
  "➤ YN0000: dist/auth/verifiers/jwtVerifier.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/jwtVerifier.js",
  "➤ YN0000: dist/auth/verifiers/secretKeyVerifier.d.ts",
  "➤ YN0000: dist/auth/verifiers/secretKeyVerifier.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/secretKeyVerifier.js",
  "➤ YN0000: dist/auth/verifiers/sha1Verifier.d.ts",
  "➤ YN0000: dist/auth/verifiers/sha1Verifier.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/sha1Verifier.js",
  "➤ YN0000: dist/auth/verifiers/sha256Verifier.d.ts",
  "➤ YN0000: dist/auth/verifiers/sha256Verifier.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/sha256Verifier.js",
  "➤ YN0000: dist/auth/verifiers/skipVerifier.d.ts",
  "➤ YN0000: dist/auth/verifiers/skipVerifier.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/skipVerifier.js",
  "➤ YN0000: dist/auth/verifiers/timestampSchemeVerifier.d.ts",
  "➤ YN0000: dist/auth/verifiers/timestampSchemeVerifier.d.ts.map",
  "➤ YN0000: dist/auth/verifiers/timestampSchemeVerifier.js",
  "➤ YN0000: dist/errors.d.ts",
  "➤ YN0000: dist/errors.d.ts.map",
  "➤ YN0000: dist/errors.js",
  "➤ YN0000: dist/functions/dbAuth/DbAuthHandler.d.ts",
  "➤ YN0000: dist/functions/dbAuth/DbAuthHandler.d.ts.map",
  "➤ YN0000: dist/functions/dbAuth/DbAuthHandler.js",
  "➤ YN0000: dist/functions/dbAuth/errors.d.ts",
  "➤ YN0000: dist/functions/dbAuth/errors.d.ts.map",
  "➤ YN0000: dist/functions/dbAuth/errors.js",
  "➤ YN0000: dist/functions/dbAuth/shared.d.ts",
  "➤ YN0000: dist/functions/dbAuth/shared.d.ts.map",
  "➤ YN0000: dist/functions/dbAuth/shared.js",
  "➤ YN0000: dist/functions/fixtures/apiGatewayProxyEvent.fixture.d.ts",
  "➤ YN0000: dist/functions/fixtures/apiGatewayProxyEvent.fixture.d.ts.map",
  "➤ YN0000: dist/functions/fixtures/apiGatewayProxyEvent.fixture.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/logger/index.d.ts",
  "➤ YN0000: dist/logger/index.d.ts.map",
  "➤ YN0000: dist/logger/index.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/validations/errors.d.ts",
  "➤ YN0000: dist/validations/errors.d.ts.map",
  "➤ YN0000: dist/validations/errors.js",
  "➤ YN0000: dist/validations/validations.d.ts",
  "➤ YN0000: dist/validations/validations.d.ts.map",
  "➤ YN0000: dist/validations/validations.js",
  "➤ YN0000: dist/webhooks/index.d.ts",
  "➤ YN0000: dist/webhooks/index.d.ts.map",
  "➤ YN0000: dist/webhooks/index.js",
  "➤ YN0000: logger/index.js",
  "➤ YN0000: logger/package.json",
  "➤ YN0000: package.json",
  "➤ YN0000: webhooks/index.js",
  "➤ YN0000: webhooks/package.json",
]
`;

exports[`tarballs api-server 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/app.d.ts",
  "➤ YN0000: dist/app.d.ts.map",
  "➤ YN0000: dist/app.js",
  "➤ YN0000: dist/cliHandlers.d.ts",
  "➤ YN0000: dist/cliHandlers.d.ts.map",
  "➤ YN0000: dist/cliHandlers.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/logFormatter/ambient.d.js",
  "➤ YN0000: dist/logFormatter/bin.d.ts",
  "➤ YN0000: dist/logFormatter/bin.d.ts.map",
  "➤ YN0000: dist/logFormatter/bin.js",
  "➤ YN0000: dist/logFormatter/index.d.ts",
  "➤ YN0000: dist/logFormatter/index.d.ts.map",
  "➤ YN0000: dist/logFormatter/index.js",
  "➤ YN0000: dist/plugins/withApiProxy.d.ts",
  "➤ YN0000: dist/plugins/withApiProxy.d.ts.map",
  "➤ YN0000: dist/plugins/withApiProxy.js",
  "➤ YN0000: dist/plugins/withFunctions.d.ts",
  "➤ YN0000: dist/plugins/withFunctions.d.ts.map",
  "➤ YN0000: dist/plugins/withFunctions.js",
  "➤ YN0000: dist/plugins/withWebServer.d.ts",
  "➤ YN0000: dist/plugins/withWebServer.d.ts.map",
  "➤ YN0000: dist/plugins/withWebServer.js",
  "➤ YN0000: dist/requestHandlers/awsLambdaFastify.d.ts",
  "➤ YN0000: dist/requestHandlers/awsLambdaFastify.d.ts.map",
  "➤ YN0000: dist/requestHandlers/awsLambdaFastify.js",
  "➤ YN0000: dist/server.d.ts",
  "➤ YN0000: dist/server.d.ts.map",
  "➤ YN0000: dist/server.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/watch.d.ts",
  "➤ YN0000: dist/watch.d.ts.map",
  "➤ YN0000: dist/watch.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs auth 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/AuthProvider.d.ts",
  "➤ YN0000: dist/AuthProvider.d.ts.map",
  "➤ YN0000: dist/AuthProvider.js",
  "➤ YN0000: dist/authClients/auth0.d.ts",
  "➤ YN0000: dist/authClients/auth0.d.ts.map",
  "➤ YN0000: dist/authClients/auth0.js",
  "➤ YN0000: dist/authClients/azureActiveDirectory.d.ts",
  "➤ YN0000: dist/authClients/azureActiveDirectory.d.ts.map",
  "➤ YN0000: dist/authClients/azureActiveDirectory.js",
  "➤ YN0000: dist/authClients/clerk.d.ts",
  "➤ YN0000: dist/authClients/clerk.d.ts.map",
  "➤ YN0000: dist/authClients/clerk.js",
  "➤ YN0000: dist/authClients/custom.d.ts",
  "➤ YN0000: dist/authClients/custom.d.ts.map",
  "➤ YN0000: dist/authClients/custom.js",
  "➤ YN0000: dist/authClients/dbAuth.d.ts",
  "➤ YN0000: dist/authClients/dbAuth.d.ts.map",
  "➤ YN0000: dist/authClients/dbAuth.js",
  "➤ YN0000: dist/authClients/ethereum.d.ts",
  "➤ YN0000: dist/authClients/ethereum.d.ts.map",
  "➤ YN0000: dist/authClients/ethereum.js",
  "➤ YN0000: dist/authClients/firebase.d.ts",
  "➤ YN0000: dist/authClients/firebase.d.ts.map",
  "➤ YN0000: dist/authClients/firebase.js",
  "➤ YN0000: dist/authClients/goTrue.d.ts",
  "➤ YN0000: dist/authClients/goTrue.d.ts.map",
  "➤ YN0000: dist/authClients/goTrue.js",
  "➤ YN0000: dist/authClients/index.d.ts",
  "➤ YN0000: dist/authClients/index.d.ts.map",
  "➤ YN0000: dist/authClients/index.js",
  "➤ YN0000: dist/authClients/magicLink.d.ts",
  "➤ YN0000: dist/authClients/magicLink.d.ts.map",
  "➤ YN0000: dist/authClients/magicLink.js",
  "➤ YN0000: dist/authClients/netlify.d.ts",
  "➤ YN0000: dist/authClients/netlify.d.ts.map",
  "➤ YN0000: dist/authClients/netlify.js",
  "➤ YN0000: dist/authClients/nhost.d.ts",
  "➤ YN0000: dist/authClients/nhost.d.ts.map",
  "➤ YN0000: dist/authClients/nhost.js",
  "➤ YN0000: dist/authClients/supabase.d.ts",
  "➤ YN0000: dist/authClients/supabase.d.ts.map",
  "➤ YN0000: dist/authClients/supabase.js",
  "➤ YN0000: dist/authClients/supertokens.d.ts",
  "➤ YN0000: dist/authClients/supertokens.d.ts.map",
  "➤ YN0000: dist/authClients/supertokens.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/useAuth.d.ts",
  "➤ YN0000: dist/useAuth.d.ts.map",
  "➤ YN0000: dist/useAuth.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs cli 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/commands/build.js",
  "➤ YN0000: dist/commands/check.js",
  "➤ YN0000: dist/commands/console.js",
  "➤ YN0000: dist/commands/data-migrate.js",
  "➤ YN0000: dist/commands/dataMigrate/install.js",
  "➤ YN0000: dist/commands/dataMigrate/up.js",
  "➤ YN0000: dist/commands/deploy.js",
  "➤ YN0000: dist/commands/deploy/helpers/helpers.js",
  "➤ YN0000: dist/commands/deploy/netlify.js",
  "➤ YN0000: dist/commands/deploy/packing/nft.js",
  "➤ YN0000: dist/commands/deploy/render.js",
  "➤ YN0000: dist/commands/deploy/serverless.js",
  "➤ YN0000: dist/commands/deploy/vercel.js",
  "➤ YN0000: dist/commands/destroy.js",
  "➤ YN0000: dist/commands/destroy/cell/cell.js",
  "➤ YN0000: dist/commands/destroy/component/component.js",
  "➤ YN0000: dist/commands/destroy/function/function.js",
  "➤ YN0000: dist/commands/destroy/helpers.js",
  "➤ YN0000: dist/commands/destroy/layout/layout.js",
  "➤ YN0000: dist/commands/destroy/page/page.js",
  "➤ YN0000: dist/commands/destroy/scaffold/scaffold.js",
  "➤ YN0000: dist/commands/destroy/sdl/sdl.js",
  "➤ YN0000: dist/commands/destroy/service/service.js",
  "➤ YN0000: dist/commands/dev.js",
  "➤ YN0000: dist/commands/exec.js",
  "➤ YN0000: dist/commands/generate.js",
  "➤ YN0000: dist/commands/generate/cell/cell.js",
  "➤ YN0000: dist/commands/generate/cell/templates/cell.tsx.template",
  "➤ YN0000: dist/commands/generate/cell/templates/cellList.tsx.template",
  "➤ YN0000: dist/commands/generate/cell/templates/mock.js.template",
  "➤ YN0000: dist/commands/generate/cell/templates/mockList.js.template",
  "➤ YN0000: dist/commands/generate/cell/templates/stories.js.template",
  "➤ YN0000: dist/commands/generate/cell/templates/test.js.template",
  "➤ YN0000: dist/commands/generate/component/component.js",
  "➤ YN0000: dist/commands/generate/component/templates/component.tsx.template",
  "➤ YN0000: dist/commands/generate/component/templates/stories.tsx.template",
  "➤ YN0000: dist/commands/generate/component/templates/test.tsx.template",
  "➤ YN0000: dist/commands/generate/dataMigration/dataMigration.js",
  "➤ YN0000: dist/commands/generate/dataMigration/templates/dataMigration.js.template",
  "➤ YN0000: dist/commands/generate/dataMigration/templates/dataMigration.ts.template",
  "➤ YN0000: dist/commands/generate/dbAuth/dbAuth.js",
  "➤ YN0000: dist/commands/generate/dbAuth/templates/forgotPassword.tsx.template",
  "➤ YN0000: dist/commands/generate/dbAuth/templates/login.tsx.template",
  "➤ YN0000: dist/commands/generate/dbAuth/templates/resetPassword.tsx.template",
  "➤ YN0000: dist/commands/generate/dbAuth/templates/signup.tsx.template",
  "➤ YN0000: dist/commands/generate/directive/directive.js",
  "➤ YN0000: dist/commands/generate/directive/templates/transformer.directive.test.ts.template",
  "➤ YN0000: dist/commands/generate/directive/templates/transformer.directive.ts.template",
  "➤ YN0000: dist/commands/generate/directive/templates/validator.directive.test.ts.template",
  "➤ YN0000: dist/commands/generate/directive/templates/validator.directive.ts.template",
  "➤ YN0000: dist/commands/generate/function/function.js",
  "➤ YN0000: dist/commands/generate/function/templates/function.ts.template",
  "➤ YN0000: dist/commands/generate/function/templates/scenarios.ts.template",
  "➤ YN0000: dist/commands/generate/function/templates/test.ts.template",
  "➤ YN0000: dist/commands/generate/helpers.js",
  "➤ YN0000: dist/commands/generate/layout/layout.js",
  "➤ YN0000: dist/commands/generate/layout/templates/layout.tsx.a11yTemplate",
  "➤ YN0000: dist/commands/generate/layout/templates/layout.tsx.template",
  "➤ YN0000: dist/commands/generate/layout/templates/stories.tsx.template",
  "➤ YN0000: dist/commands/generate/layout/templates/test.tsx.template",
  "➤ YN0000: dist/commands/generate/model/model.js",
  "➤ YN0000: dist/commands/generate/model/templates/model.js.template",
  "➤ YN0000: dist/commands/generate/page/page.js",
  "➤ YN0000: dist/commands/generate/page/templates/page.tsx.template",
  "➤ YN0000: dist/commands/generate/page/templates/stories.tsx.template",
  "➤ YN0000: dist/commands/generate/page/templates/test.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/scaffold.js",
  "➤ YN0000: dist/commands/generate/scaffold/templates/assets/scaffold.css.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/assets/scaffold.tailwind.css.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/components/EditNameCell.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/components/Name.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/components/NameCell.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/components/NameForm.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/components/Names.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/components/NamesCell.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/components/NewName.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/layouts/NamesLayout.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/pages/EditNamePage.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/pages/NamePage.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/pages/NamesPage.tsx.template",
  "➤ YN0000: dist/commands/generate/scaffold/templates/pages/NewNamePage.tsx.template",
  "➤ YN0000: dist/commands/generate/script/script.js",
  "➤ YN0000: dist/commands/generate/script/templates/script.js.template",
  "➤ YN0000: dist/commands/generate/script/templates/tsconfig.json.template",
  "➤ YN0000: dist/commands/generate/sdl/sdl.js",
  "➤ YN0000: dist/commands/generate/sdl/templates/sdl.js.template",
  "➤ YN0000: dist/commands/generate/sdl/templates/sdl.ts.template",
  "➤ YN0000: dist/commands/generate/secret/secret.js",
  "➤ YN0000: dist/commands/generate/service/service.js",
  "➤ YN0000: dist/commands/generate/service/templates/scenarios.ts.template",
  "➤ YN0000: dist/commands/generate/service/templates/service.ts.template",
  "➤ YN0000: dist/commands/generate/service/templates/test.ts.template",
  "➤ YN0000: dist/commands/info.js",
  "➤ YN0000: dist/commands/lint.js",
  "➤ YN0000: dist/commands/open.js",
  "➤ YN0000: dist/commands/prerender.js",
  "➤ YN0000: dist/commands/prisma.js",
  "➤ YN0000: dist/commands/record.js",
  "➤ YN0000: dist/commands/record/init.js",
  "➤ YN0000: dist/commands/serve.js",
  "➤ YN0000: dist/commands/setup.js",
  "➤ YN0000: dist/commands/setup/auth/auth.js",
  "➤ YN0000: dist/commands/setup/auth/providers/auth0.js",
  "➤ YN0000: dist/commands/setup/auth/providers/azureActiveDirectory.js",
  "➤ YN0000: dist/commands/setup/auth/providers/clerk.js",
  "➤ YN0000: dist/commands/setup/auth/providers/dbAuth.js",
  "➤ YN0000: dist/commands/setup/auth/providers/ethereum.js",
  "➤ YN0000: dist/commands/setup/auth/providers/firebase.js",
  "➤ YN0000: dist/commands/setup/auth/providers/goTrue.js",
  "➤ YN0000: dist/commands/setup/auth/providers/magicLink.js",
  "➤ YN0000: dist/commands/setup/auth/providers/netlify.js",
  "➤ YN0000: dist/commands/setup/auth/providers/nhost.js",
  "➤ YN0000: dist/commands/setup/auth/providers/supabase.js",
  "➤ YN0000: dist/commands/setup/auth/templates/auth.ts.template",
  "➤ YN0000: dist/commands/setup/auth/templates/azureActiveDirectory.auth.ts.template",
  "➤ YN0000: dist/commands/setup/auth/templates/dbAuth.auth.ts.template",
  "➤ YN0000: dist/commands/setup/auth/templates/dbAuth.function.ts.template",
  "➤ YN0000: dist/commands/setup/auth/templates/ethereum.auth.ts.template",
  "➤ YN0000: dist/commands/setup/auth/templates/firebase.auth.ts.template",
  "➤ YN0000: dist/commands/setup/auth/templates/magicLink.auth.js.template",
  "➤ YN0000: dist/commands/setup/custom-web-index/custom-web-index.js",
  "➤ YN0000: dist/commands/setup/deploy/deploy.js",
  "➤ YN0000: dist/commands/setup/deploy/helpers/index.js",
  "➤ YN0000: dist/commands/setup/deploy/providers/netlify.js",
  "➤ YN0000: dist/commands/setup/deploy/providers/render.js",
  "➤ YN0000: dist/commands/setup/deploy/providers/serverless.js",
  "➤ YN0000: dist/commands/setup/deploy/providers/vercel.js",
  "➤ YN0000: dist/commands/setup/deploy/templates/netlify.js",
  "➤ YN0000: dist/commands/setup/deploy/templates/render.js",
  "➤ YN0000: dist/commands/setup/deploy/templates/serverless/api.js",
  "➤ YN0000: dist/commands/setup/deploy/templates/serverless/web.js",
  "➤ YN0000: dist/commands/setup/generator/generator.js",
  "➤ YN0000: dist/commands/setup/i18n/i18n.js",
  "➤ YN0000: dist/commands/setup/i18n/templates/en.json.template",
  "➤ YN0000: dist/commands/setup/i18n/templates/fr.json.template",
  "➤ YN0000: dist/commands/setup/i18n/templates/i18n.js.template",
  "➤ YN0000: dist/commands/setup/tailwind.js",
  "➤ YN0000: dist/commands/setup/tsconfig/tsconfig.js",
  "➤ YN0000: dist/commands/setup/ui/libraries/chakra-ui.js",
  "➤ YN0000: dist/commands/setup/ui/libraries/tailwindcss.js",
  "➤ YN0000: dist/commands/setup/ui/tasks/configure-storybook.js",
  "➤ YN0000: dist/commands/setup/ui/tasks/setup-chakra.js",
  "➤ YN0000: dist/commands/setup/ui/templates/postcss.config.js.template",
  "➤ YN0000: dist/commands/setup/ui/templates/storybook.preview.js.template",
  "➤ YN0000: dist/commands/setup/ui/ui.js",
  "➤ YN0000: dist/commands/setup/webpack/templates/webpack.config.js.template",
  "➤ YN0000: dist/commands/setup/webpack/webpack.js",
  "➤ YN0000: dist/commands/storybook.js",
  "➤ YN0000: dist/commands/test.js",
  "➤ YN0000: dist/commands/ts-to-js.js",
  "➤ YN0000: dist/commands/type-check.js",
  "➤ YN0000: dist/commands/upgrade.js",
  "➤ YN0000: dist/index.d.js",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/lib/colors.js",
  "➤ YN0000: dist/lib/generatePrismaClient.js",
  "➤ YN0000: dist/lib/index.js",
  "➤ YN0000: dist/lib/mockTelemetry.js",
  "➤ YN0000: dist/lib/pluralHelpers.js",
  "➤ YN0000: dist/lib/rwPluralize.js",
  "➤ YN0000: dist/lib/schemaHelpers.js",
  "➤ YN0000: dist/lib/test.js",
  "➤ YN0000: dist/middleware/checkForBabelConfig.js",
  "➤ YN0000: dist/middleware/detectProjectRwVersion.js",
  "➤ YN0000: dist/rwfw.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs codemods 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/codemods.js",
  "➤ YN0000: dist/codemods/list.yargs.js",
  "➤ YN0000: dist/codemods/v0.37.x/addDirectives/addDirectives.js",
  "➤ YN0000: dist/codemods/v0.37.x/addDirectives/addDirectives.yargs.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateApiImports/updateApiImports.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateApiImports/updateApiImports.yargs.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateForms/updateForms.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateForms/updateForms.yargs.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateGraphQLFunction/updateGraphQLFunction.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateGraphQLFunction/updateGraphQLFunction.yargs.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateScenarios/updateScenarios.js",
  "➤ YN0000: dist/codemods/v0.37.x/updateScenarios/updateScenarios.yargs.js",
  "➤ YN0000: dist/codemods/v0.38.x/renameApiProxyPath/renameApiProxyPath.js",
  "➤ YN0000: dist/codemods/v0.38.x/renameApiProxyPath/renameApiProxyPath.yargs.js",
  "➤ YN0000: dist/codemods/v0.38.x/updateNodeEngine/updateNodeEngine.js",
  "➤ YN0000: dist/codemods/v0.38.x/updateNodeEngine/updateNodeEngine.yargs.js",
  "➤ YN0000: dist/codemods/v0.38.x/updateScaffoldStyles/updateScaffoldStyles.js",
  "➤ YN0000: dist/codemods/v0.38.x/updateScaffoldStyles/updateScaffoldStyles.yargs.js",
  "➤ YN0000: dist/codemods/v0.38.x/updateSeedScript/updateSeedScript.js",
  "➤ YN0000: dist/codemods/v0.38.x/updateSeedScript/updateSeedScript.yargs.js",
  "➤ YN0000: dist/codemods/v0.39.x/updateBabelConfig/updateBabelConfig.js",
  "➤ YN0000: dist/codemods/v0.39.x/updateBabelConfig/updateBabelConfig.yargs.js",
  "➤ YN0000: dist/codemods/v0.39.x/updateCellMocks/updateCellMocks.js",
  "➤ YN0000: dist/codemods/v0.39.x/updateCellMocks/updateCellMocks.yargs.js",
  "➤ YN0000: dist/codemods/v0.39.x/updateRouterParamTypes/updateRouterParamTypes.js",
  "➤ YN0000: dist/codemods/v0.39.x/updateRouterParamTypes/updateRouterParamTypes.yargs.js",
  "➤ YN0000: dist/codemods/v0.44.x/updateJestConfig/updateJestConfig.js",
  "➤ YN0000: dist/codemods/v0.44.x/updateJestConfig/updateJestConfig.transform.js",
  "➤ YN0000: dist/codemods/v0.44.x/updateJestConfig/updateJestConfig.yargs.js",
  "➤ YN0000: dist/lib/fetchFileFromTemplate.js",
  "➤ YN0000: dist/lib/getFilesWithPattern.js",
  "➤ YN0000: dist/lib/getRWPaths.js",
  "➤ YN0000: dist/lib/getRootPackageJSON.js",
  "➤ YN0000: dist/lib/isTSProject.js",
  "➤ YN0000: dist/lib/prettify.js",
  "➤ YN0000: dist/lib/runTransform.js",
  "➤ YN0000: dist/lib/ts2js.js",
  "➤ YN0000: dist/testUtils/index.js",
  "➤ YN0000: dist/testUtils/matchFolderTransform.js",
  "➤ YN0000: dist/testUtils/matchInlineTransformSnapshot.js",
  "➤ YN0000: dist/testUtils/matchTransformSnapshot.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs core 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: config/__tests__/webpack.common.test.js",
  "➤ YN0000: config/webpack.common.js",
  "➤ YN0000: config/webpack.development.js",
  "➤ YN0000: config/webpack.perf.js",
  "➤ YN0000: config/webpack.production.js",
  "➤ YN0000: config/webpack.stats.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs create-redwood-app 1`] = `
Array [
  "Usage Error: Workspace '@redwoodjs/create-redwood-app' not found. Did you mean any of the following:",
  "  - @redwoodjs/api",
  "  - @redwoodjs/api-server",
  "  - @redwoodjs/auth",
  "  - @redwoodjs/cli",
  "  - @redwoodjs/codemods",
  "  - @redwoodjs/core",
  "  - @redwoodjs/eslint-config",
  "  - @redwoodjs/forms",
  "  - @redwoodjs/graphql-server",
  "  - @redwoodjs/internal",
  "  - @redwoodjs/prerender",
  "  - @redwoodjs/record",
  "  - @redwoodjs/router",
  "  - @redwoodjs/structure",
  "  - @redwoodjs/telemetry",
  "  - @redwoodjs/testing",
  "  - @redwoodjs/web",
  "  - create-redwood-app",
  "  - root-workspace-0b6124?",
  "",
  "$ yarn workspace <workspaceName> <commandName> ...",
]
`;

exports[`tarballs eslint-config 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: index.js",
  "➤ YN0000: package.json",
  "➤ YN0000: shared.js",
]
`;

exports[`tarballs forms 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/FormError.d.ts",
  "➤ YN0000: dist/FormError.d.ts.map",
  "➤ YN0000: dist/FormError.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs graphql-server 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/cors.d.ts",
  "➤ YN0000: dist/cors.d.ts.map",
  "➤ YN0000: dist/cors.js",
  "➤ YN0000: dist/directives/makeDirectives.d.ts",
  "➤ YN0000: dist/directives/makeDirectives.d.ts.map",
  "➤ YN0000: dist/directives/makeDirectives.js",
  "➤ YN0000: dist/errors.d.ts",
  "➤ YN0000: dist/errors.d.ts.map",
  "➤ YN0000: dist/errors.js",
  "➤ YN0000: dist/functions/graphql.d.ts",
  "➤ YN0000: dist/functions/graphql.d.ts.map",
  "➤ YN0000: dist/functions/graphql.js",
  "➤ YN0000: dist/functions/types.d.ts",
  "➤ YN0000: dist/functions/types.d.ts.map",
  "➤ YN0000: dist/functions/types.js",
  "➤ YN0000: dist/functions/useRequireAuth.d.ts",
  "➤ YN0000: dist/functions/useRequireAuth.d.ts.map",
  "➤ YN0000: dist/functions/useRequireAuth.js",
  "➤ YN0000: dist/global.api-auto-imports.d.ts",
  "➤ YN0000: dist/global.api-auto-imports.d.ts.map",
  "➤ YN0000: dist/global.api-auto-imports.js",
  "➤ YN0000: dist/globalContext.d.ts",
  "➤ YN0000: dist/globalContext.d.ts.map",
  "➤ YN0000: dist/globalContext.js",
  "➤ YN0000: dist/healthcheck.d.ts",
  "➤ YN0000: dist/healthcheck.d.ts.map",
  "➤ YN0000: dist/healthcheck.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/makeMergedSchema/makeMergedSchema.d.ts",
  "➤ YN0000: dist/makeMergedSchema/makeMergedSchema.d.ts.map",
  "➤ YN0000: dist/makeMergedSchema/makeMergedSchema.js",
  "➤ YN0000: dist/plugins/__fixtures__/common.d.ts",
  "➤ YN0000: dist/plugins/__fixtures__/common.d.ts.map",
  "➤ YN0000: dist/plugins/__fixtures__/common.js",
  "➤ YN0000: dist/plugins/useRedwoodAuthContext.d.ts",
  "➤ YN0000: dist/plugins/useRedwoodAuthContext.d.ts.map",
  "➤ YN0000: dist/plugins/useRedwoodAuthContext.js",
  "➤ YN0000: dist/plugins/useRedwoodDirective.d.ts",
  "➤ YN0000: dist/plugins/useRedwoodDirective.d.ts.map",
  "➤ YN0000: dist/plugins/useRedwoodDirective.js",
  "➤ YN0000: dist/plugins/useRedwoodGlobalContextSetter.d.ts",
  "➤ YN0000: dist/plugins/useRedwoodGlobalContextSetter.d.ts.map",
  "➤ YN0000: dist/plugins/useRedwoodGlobalContextSetter.js",
  "➤ YN0000: dist/plugins/useRedwoodLogger.d.ts",
  "➤ YN0000: dist/plugins/useRedwoodLogger.d.ts.map",
  "➤ YN0000: dist/plugins/useRedwoodLogger.js",
  "➤ YN0000: dist/plugins/useRedwoodPopulateContext.d.ts",
  "➤ YN0000: dist/plugins/useRedwoodPopulateContext.d.ts.map",
  "➤ YN0000: dist/plugins/useRedwoodPopulateContext.js",
  "➤ YN0000: dist/rootSchema.d.ts",
  "➤ YN0000: dist/rootSchema.d.ts.map",
  "➤ YN0000: dist/rootSchema.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/types.d.ts",
  "➤ YN0000: dist/types.d.ts.map",
  "➤ YN0000: dist/types.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs internal 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/__tests__/fixtures/redwood.empty.toml",
  "➤ YN0000: dist/__tests__/fixtures/redwood.toml",
  "➤ YN0000: dist/__tests__/fixtures/redwood.withEnv.toml",
  "➤ YN0000: dist/ast.d.ts",
  "➤ YN0000: dist/ast.d.ts.map",
  "➤ YN0000: dist/ast.js",
  "➤ YN0000: dist/build/api.d.ts",
  "➤ YN0000: dist/build/api.d.ts.map",
  "➤ YN0000: dist/build/api.js",
  "➤ YN0000: dist/build/babel/api.d.ts",
  "➤ YN0000: dist/build/babel/api.d.ts.map",
  "➤ YN0000: dist/build/babel/api.js",
  "➤ YN0000: dist/build/babel/common.d.ts",
  "➤ YN0000: dist/build/babel/common.d.ts.map",
  "➤ YN0000: dist/build/babel/common.js",
  "➤ YN0000: dist/build/babel/web.d.ts",
  "➤ YN0000: dist/build/babel/web.d.ts.map",
  "➤ YN0000: dist/build/babel/web.js",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-cell.d.ts",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-cell.d.ts.map",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-cell.js",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-directory-named-import.d.ts",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-directory-named-import.d.ts.map",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-directory-named-import.js",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-import-dir.d.ts",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-import-dir.d.ts.map",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-import-dir.js",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-mock-cell-data.d.ts",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-mock-cell-data.d.ts.map",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-mock-cell-data.js",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-routes-auto-loader.d.ts",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-routes-auto-loader.d.ts.map",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-routes-auto-loader.js",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-src-alias.d.ts",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-src-alias.d.ts.map",
  "➤ YN0000: dist/build/babelPlugins/babel-plugin-redwood-src-alias.js",
  "➤ YN0000: dist/build/web.d.ts",
  "➤ YN0000: dist/build/web.d.ts.map",
  "➤ YN0000: dist/build/web.js",
  "➤ YN0000: dist/config.d.ts",
  "➤ YN0000: dist/config.d.ts.map",
  "➤ YN0000: dist/config.js",
  "➤ YN0000: dist/dev.d.ts",
  "➤ YN0000: dist/dev.d.ts.map",
  "➤ YN0000: dist/dev.js",
  "➤ YN0000: dist/files.d.ts",
  "➤ YN0000: dist/files.d.ts.map",
  "➤ YN0000: dist/files.js",
  "➤ YN0000: dist/generate/generate.d.ts",
  "➤ YN0000: dist/generate/generate.d.ts.map",
  "➤ YN0000: dist/generate/generate.js",
  "➤ YN0000: dist/generate/graphqlSchema.d.ts",
  "➤ YN0000: dist/generate/graphqlSchema.d.ts.map",
  "➤ YN0000: dist/generate/graphqlSchema.js",
  "➤ YN0000: dist/generate/templates.d.ts",
  "➤ YN0000: dist/generate/templates.d.ts.map",
  "➤ YN0000: dist/generate/templates.js",
  "➤ YN0000: dist/generate/templates/all-currentUser.d.ts.template",
  "➤ YN0000: dist/generate/templates/api-globImports.d.ts.template",
  "➤ YN0000: dist/generate/templates/api-globalContext.d.ts.template",
  "➤ YN0000: dist/generate/templates/api-scenarios.d.ts.template",
  "➤ YN0000: dist/generate/templates/api-test-globals.d.ts.template",
  "➤ YN0000: dist/generate/templates/mirror-cell.d.ts.template",
  "➤ YN0000: dist/generate/templates/mirror-directoryNamedModule.d.ts.template",
  "➤ YN0000: dist/generate/templates/web-routerRoutes.d.ts.template",
  "➤ YN0000: dist/generate/templates/web-routesPages.d.ts.template",
  "➤ YN0000: dist/generate/templates/web-test-globals.d.ts.template",
  "➤ YN0000: dist/generate/typeDefinitions.d.ts",
  "➤ YN0000: dist/generate/typeDefinitions.d.ts.map",
  "➤ YN0000: dist/generate/typeDefinitions.js",
  "➤ YN0000: dist/generate/watch.d.ts",
  "➤ YN0000: dist/generate/watch.d.ts.map",
  "➤ YN0000: dist/generate/watch.js",
  "➤ YN0000: dist/gql.d.ts",
  "➤ YN0000: dist/gql.d.ts.map",
  "➤ YN0000: dist/gql.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/jsx.d.ts",
  "➤ YN0000: dist/jsx.d.ts.map",
  "➤ YN0000: dist/jsx.js",
  "➤ YN0000: dist/jsxAttributeValue.d.ts",
  "➤ YN0000: dist/jsxAttributeValue.d.ts.map",
  "➤ YN0000: dist/jsxAttributeValue.js",
  "➤ YN0000: dist/paths.d.ts",
  "➤ YN0000: dist/paths.d.ts.map",
  "➤ YN0000: dist/paths.js",
  "➤ YN0000: dist/ts2js.d.ts",
  "➤ YN0000: dist/ts2js.d.ts.map",
  "➤ YN0000: dist/ts2js.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/validateSchema.d.ts",
  "➤ YN0000: dist/validateSchema.d.ts.map",
  "➤ YN0000: dist/validateSchema.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs prerender 1`] = `
Array [
  "➤ YN0000: browserUtils/index.js",
  "➤ YN0000: browserUtils/package.json",
  "➤ YN0000: detection/index.js",
  "➤ YN0000: detection/package.json",
  "➤ YN0000: dist/babelPlugins/babel-plugin-redwood-prerender-media-imports.d.ts",
  "➤ YN0000: dist/babelPlugins/babel-plugin-redwood-prerender-media-imports.d.ts.map",
  "➤ YN0000: dist/babelPlugins/babel-plugin-redwood-prerender-media-imports.js",
  "➤ YN0000: dist/babelPlugins/utils.d.ts",
  "➤ YN0000: dist/babelPlugins/utils.d.ts.map",
  "➤ YN0000: dist/babelPlugins/utils.js",
  "➤ YN0000: dist/browserUtils/index.d.ts",
  "➤ YN0000: dist/browserUtils/index.d.ts.map",
  "➤ YN0000: dist/browserUtils/index.js",
  "➤ YN0000: dist/detection/index.d.ts",
  "➤ YN0000: dist/detection/index.d.ts.map",
  "➤ YN0000: dist/detection/index.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/internal.d.ts",
  "➤ YN0000: dist/internal.d.ts.map",
  "➤ YN0000: dist/internal.js",
  "➤ YN0000: dist/runPrerender.d.ts",
  "➤ YN0000: dist/runPrerender.d.ts.map",
  "➤ YN0000: dist/runPrerender.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs record 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/errors.js",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/redwoodrecord/Core.js",
  "➤ YN0000: dist/redwoodrecord/RedwoodRecord.js",
  "➤ YN0000: dist/redwoodrecord/Reflection.js",
  "➤ YN0000: dist/redwoodrecord/RelationProxy.js",
  "➤ YN0000: dist/redwoodrecord/ValidationMixin.js",
  "➤ YN0000: dist/tasks/parse.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs router 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/ActivePageContext.d.ts",
  "➤ YN0000: dist/ActivePageContext.d.ts.map",
  "➤ YN0000: dist/ActivePageContext.js",
  "➤ YN0000: dist/PageLoadingContext.d.ts",
  "➤ YN0000: dist/PageLoadingContext.d.ts.map",
  "➤ YN0000: dist/PageLoadingContext.js",
  "➤ YN0000: dist/Set.d.ts",
  "➤ YN0000: dist/Set.d.ts.map",
  "➤ YN0000: dist/Set.js",
  "➤ YN0000: dist/active-route-loader.d.ts",
  "➤ YN0000: dist/active-route-loader.d.ts.map",
  "➤ YN0000: dist/active-route-loader.js",
  "➤ YN0000: dist/history.d.ts",
  "➤ YN0000: dist/history.d.ts.map",
  "➤ YN0000: dist/history.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/links.d.ts",
  "➤ YN0000: dist/links.d.ts.map",
  "➤ YN0000: dist/links.js",
  "➤ YN0000: dist/location.d.ts",
  "➤ YN0000: dist/location.d.ts.map",
  "➤ YN0000: dist/location.js",
  "➤ YN0000: dist/page-loader.d.ts",
  "➤ YN0000: dist/page-loader.d.ts.map",
  "➤ YN0000: dist/page-loader.js",
  "➤ YN0000: dist/params.d.ts",
  "➤ YN0000: dist/params.d.ts.map",
  "➤ YN0000: dist/params.js",
  "➤ YN0000: dist/route-announcement.d.ts",
  "➤ YN0000: dist/route-announcement.d.ts.map",
  "➤ YN0000: dist/route-announcement.js",
  "➤ YN0000: dist/route-focus.d.ts",
  "➤ YN0000: dist/route-focus.d.ts.map",
  "➤ YN0000: dist/route-focus.js",
  "➤ YN0000: dist/router-context.d.ts",
  "➤ YN0000: dist/router-context.d.ts.map",
  "➤ YN0000: dist/router-context.js",
  "➤ YN0000: dist/router.d.ts",
  "➤ YN0000: dist/router.d.ts.map",
  "➤ YN0000: dist/router.js",
  "➤ YN0000: dist/splash-page.d.ts",
  "➤ YN0000: dist/splash-page.d.ts.map",
  "➤ YN0000: dist/splash-page.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/useIsMounted.d.ts",
  "➤ YN0000: dist/useIsMounted.d.ts.map",
  "➤ YN0000: dist/useIsMounted.js",
  "➤ YN0000: dist/util.d.ts",
  "➤ YN0000: dist/util.d.ts.map",
  "➤ YN0000: dist/util.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs structure 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/errors.d.ts",
  "➤ YN0000: dist/errors.d.ts.map",
  "➤ YN0000: dist/errors.js",
  "➤ YN0000: dist/hosts.d.ts",
  "➤ YN0000: dist/hosts.d.ts.map",
  "➤ YN0000: dist/hosts.js",
  "➤ YN0000: dist/ide.d.ts",
  "➤ YN0000: dist/ide.d.ts.map",
  "➤ YN0000: dist/ide.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/interactive_cli/RedwoodCommandString.d.ts",
  "➤ YN0000: dist/interactive_cli/RedwoodCommandString.d.ts.map",
  "➤ YN0000: dist/interactive_cli/RedwoodCommandString.js",
  "➤ YN0000: dist/interactive_cli/command_builder.d.ts",
  "➤ YN0000: dist/interactive_cli/command_builder.d.ts.map",
  "➤ YN0000: dist/interactive_cli/command_builder.js",
  "➤ YN0000: dist/interactive_cli/dry_run.d.ts",
  "➤ YN0000: dist/interactive_cli/dry_run.d.ts.map",
  "➤ YN0000: dist/interactive_cli/dry_run.js",
  "➤ YN0000: dist/interactive_cli/ui.d.ts",
  "➤ YN0000: dist/interactive_cli/ui.d.ts.map",
  "➤ YN0000: dist/interactive_cli/ui.js",
  "➤ YN0000: dist/language_server/RWLanguageServer.d.ts",
  "➤ YN0000: dist/language_server/RWLanguageServer.d.ts.map",
  "➤ YN0000: dist/language_server/RWLanguageServer.js",
  "➤ YN0000: dist/language_server/commands.d.ts",
  "➤ YN0000: dist/language_server/commands.d.ts.map",
  "➤ YN0000: dist/language_server/commands.js",
  "➤ YN0000: dist/language_server/diagnostics.d.ts",
  "➤ YN0000: dist/language_server/diagnostics.d.ts.map",
  "➤ YN0000: dist/language_server/diagnostics.js",
  "➤ YN0000: dist/language_server/outline.d.ts",
  "➤ YN0000: dist/language_server/outline.d.ts.map",
  "➤ YN0000: dist/language_server/outline.js",
  "➤ YN0000: dist/language_server/start.d.ts",
  "➤ YN0000: dist/language_server/start.d.ts.map",
  "➤ YN0000: dist/language_server/start.js",
  "➤ YN0000: dist/language_server/xmethods.d.ts",
  "➤ YN0000: dist/language_server/xmethods.d.ts.map",
  "➤ YN0000: dist/language_server/xmethods.js",
  "➤ YN0000: dist/model/RWCell.d.ts",
  "➤ YN0000: dist/model/RWCell.d.ts.map",
  "➤ YN0000: dist/model/RWCell.js",
  "➤ YN0000: dist/model/RWComponent.d.ts",
  "➤ YN0000: dist/model/RWComponent.d.ts.map",
  "➤ YN0000: dist/model/RWComponent.js",
  "➤ YN0000: dist/model/RWEnvHelper.d.ts",
  "➤ YN0000: dist/model/RWEnvHelper.d.ts.map",
  "➤ YN0000: dist/model/RWEnvHelper.js",
  "➤ YN0000: dist/model/RWFunction.d.ts",
  "➤ YN0000: dist/model/RWFunction.d.ts.map",
  "➤ YN0000: dist/model/RWFunction.js",
  "➤ YN0000: dist/model/RWLayout.d.ts",
  "➤ YN0000: dist/model/RWLayout.d.ts.map",
  "➤ YN0000: dist/model/RWLayout.js",
  "➤ YN0000: dist/model/RWPage.d.ts",
  "➤ YN0000: dist/model/RWPage.d.ts.map",
  "➤ YN0000: dist/model/RWPage.js",
  "➤ YN0000: dist/model/RWProject.d.ts",
  "➤ YN0000: dist/model/RWProject.d.ts.map",
  "➤ YN0000: dist/model/RWProject.js",
  "➤ YN0000: dist/model/RWRoute.d.ts",
  "➤ YN0000: dist/model/RWRoute.d.ts.map",
  "➤ YN0000: dist/model/RWRoute.js",
  "➤ YN0000: dist/model/RWRouter.d.ts",
  "➤ YN0000: dist/model/RWRouter.d.ts.map",
  "➤ YN0000: dist/model/RWRouter.js",
  "➤ YN0000: dist/model/RWSDL.d.ts",
  "➤ YN0000: dist/model/RWSDL.d.ts.map",
  "➤ YN0000: dist/model/RWSDL.js",
  "➤ YN0000: dist/model/RWSDLField.d.ts",
  "➤ YN0000: dist/model/RWSDLField.d.ts.map",
  "➤ YN0000: dist/model/RWSDLField.js",
  "➤ YN0000: dist/model/RWService.d.ts",
  "➤ YN0000: dist/model/RWService.d.ts.map",
  "➤ YN0000: dist/model/RWService.js",
  "➤ YN0000: dist/model/RWServiceFunction.d.ts",
  "➤ YN0000: dist/model/RWServiceFunction.d.ts.map",
  "➤ YN0000: dist/model/RWServiceFunction.js",
  "➤ YN0000: dist/model/RWTOML.d.ts",
  "➤ YN0000: dist/model/RWTOML.d.ts.map",
  "➤ YN0000: dist/model/RWTOML.js",
  "➤ YN0000: dist/model/index.d.ts",
  "➤ YN0000: dist/model/index.d.ts.map",
  "➤ YN0000: dist/model/index.js",
  "➤ YN0000: dist/model/util/advanced_path_parser.d.ts",
  "➤ YN0000: dist/model/util/advanced_path_parser.d.ts.map",
  "➤ YN0000: dist/model/util/advanced_path_parser.js",
  "➤ YN0000: dist/model/util/process_env.d.ts",
  "➤ YN0000: dist/model/util/process_env.d.ts.map",
  "➤ YN0000: dist/model/util/process_env.js",
  "➤ YN0000: dist/outline/index.d.ts",
  "➤ YN0000: dist/outline/index.d.ts.map",
  "➤ YN0000: dist/outline/index.js",
  "➤ YN0000: dist/outline/outline.d.ts",
  "➤ YN0000: dist/outline/outline.d.ts.map",
  "➤ YN0000: dist/outline/outline.js",
  "➤ YN0000: dist/outline/types.d.ts",
  "➤ YN0000: dist/outline/types.d.ts.map",
  "➤ YN0000: dist/outline/types.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/util.d.ts",
  "➤ YN0000: dist/util.d.ts.map",
  "➤ YN0000: dist/util.js",
  "➤ YN0000: dist/x/Array.d.ts",
  "➤ YN0000: dist/x/Array.d.ts.map",
  "➤ YN0000: dist/x/Array.js",
  "➤ YN0000: dist/x/URL.d.ts",
  "➤ YN0000: dist/x/URL.d.ts.map",
  "➤ YN0000: dist/x/URL.js",
  "➤ YN0000: dist/x/child_process.d.ts",
  "➤ YN0000: dist/x/child_process.d.ts.map",
  "➤ YN0000: dist/x/child_process.js",
  "➤ YN0000: dist/x/decorators.d.ts",
  "➤ YN0000: dist/x/decorators.d.ts.map",
  "➤ YN0000: dist/x/decorators.js",
  "➤ YN0000: dist/x/path.d.ts",
  "➤ YN0000: dist/x/path.d.ts.map",
  "➤ YN0000: dist/x/path.js",
  "➤ YN0000: dist/x/prisma.d.ts",
  "➤ YN0000: dist/x/prisma.d.ts.map",
  "➤ YN0000: dist/x/prisma.js",
  "➤ YN0000: dist/x/ts-morph.d.ts",
  "➤ YN0000: dist/x/ts-morph.d.ts.map",
  "➤ YN0000: dist/x/ts-morph.js",
  "➤ YN0000: dist/x/vscode-languageserver-types.d.ts",
  "➤ YN0000: dist/x/vscode-languageserver-types.d.ts.map",
  "➤ YN0000: dist/x/vscode-languageserver-types.js",
  "➤ YN0000: dist/x/vscode-languageserver.d.ts",
  "➤ YN0000: dist/x/vscode-languageserver.d.ts.map",
  "➤ YN0000: dist/x/vscode-languageserver.js",
  "➤ YN0000: dist/x/vscode.d.ts",
  "➤ YN0000: dist/x/vscode.d.ts.map",
  "➤ YN0000: dist/x/vscode.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs telemetry 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/scripts/invoke.js",
  "➤ YN0000: dist/sendTelemetry.js",
  "➤ YN0000: dist/telemetry.js",
  "➤ YN0000: package.json",
]
`;

exports[`tarballs testing 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: api/index.js",
  "➤ YN0000: api/package.json",
  "➤ YN0000: config/jest/api/RedwoodApiJestEnv.js",
  "➤ YN0000: config/jest/api/apiBabelConfig.js",
  "➤ YN0000: config/jest/api/index.js",
  "➤ YN0000: config/jest/api/jest-preset.js",
  "➤ YN0000: config/jest/api/jest.setup.js",
  "➤ YN0000: config/jest/jest-serial-runner.js",
  "➤ YN0000: config/jest/web/RedwoodWebJestEnv.js",
  "➤ YN0000: config/jest/web/index.js",
  "➤ YN0000: config/jest/web/jest-preset.js",
  "➤ YN0000: config/jest/web/jest.setup.js",
  "➤ YN0000: config/jest/web/webBabelConfig.js",
  "➤ YN0000: config/storybook/main.js",
  "➤ YN0000: config/storybook/manager.example.js",
  "➤ YN0000: config/storybook/manager.js",
  "➤ YN0000: config/storybook/preview.example.js",
  "➤ YN0000: config/storybook/preview.js",
  "➤ YN0000: dist/api/apiFunction.d.ts",
  "➤ YN0000: dist/api/apiFunction.d.ts.map",
  "➤ YN0000: dist/api/apiFunction.js",
  "➤ YN0000: dist/api/directive.d.ts",
  "➤ YN0000: dist/api/directive.d.ts.map",
  "➤ YN0000: dist/api/directive.js",
  "➤ YN0000: dist/api/index.d.ts",
  "➤ YN0000: dist/api/index.d.ts.map",
  "➤ YN0000: dist/api/index.js",
  "➤ YN0000: dist/api/scenario.d.ts",
  "➤ YN0000: dist/api/scenario.d.ts.map",
  "➤ YN0000: dist/api/scenario.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: dist/web/MockParamsProvider.d.ts",
  "➤ YN0000: dist/web/MockParamsProvider.d.ts.map",
  "➤ YN0000: dist/web/MockParamsProvider.js",
  "➤ YN0000: dist/web/MockProviders.d.ts",
  "➤ YN0000: dist/web/MockProviders.d.ts.map",
  "➤ YN0000: dist/web/MockProviders.js",
  "➤ YN0000: dist/web/MockRouter.d.ts",
  "➤ YN0000: dist/web/MockRouter.d.ts.map",
  "➤ YN0000: dist/web/MockRouter.js",
  "➤ YN0000: dist/web/StorybookProvider.d.ts",
  "➤ YN0000: dist/web/StorybookProvider.d.ts.map",
  "➤ YN0000: dist/web/StorybookProvider.js",
  "➤ YN0000: dist/web/customRender.d.ts",
  "➤ YN0000: dist/web/customRender.d.ts.map",
  "➤ YN0000: dist/web/customRender.js",
  "➤ YN0000: dist/web/fileMock.d.ts",
  "➤ YN0000: dist/web/fileMock.d.ts.map",
  "➤ YN0000: dist/web/fileMock.js",
  "➤ YN0000: dist/web/global.d.ts",
  "➤ YN0000: dist/web/global.d.ts.map",
  "➤ YN0000: dist/web/global.js",
  "➤ YN0000: dist/web/index.d.ts",
  "➤ YN0000: dist/web/index.d.ts.map",
  "➤ YN0000: dist/web/index.js",
  "➤ YN0000: dist/web/mockRequests.d.ts",
  "➤ YN0000: dist/web/mockRequests.d.ts.map",
  "➤ YN0000: dist/web/mockRequests.js",
  "➤ YN0000: package.json",
  "➤ YN0000: web/index.js",
  "➤ YN0000: web/package.json",
]
`;

exports[`tarballs web 1`] = `
Array [
  "➤ YN0000: README.md",
  "➤ YN0000: apollo/index.js",
  "➤ YN0000: apollo/package.json",
  "➤ YN0000: dist/apollo/index.d.ts",
  "➤ YN0000: dist/apollo/index.d.ts.map",
  "➤ YN0000: dist/apollo/index.js",
  "➤ YN0000: dist/apollo/typeOverride.d.ts",
  "➤ YN0000: dist/apollo/typeOverride.d.ts.map",
  "➤ YN0000: dist/apollo/typeOverride.js",
  "➤ YN0000: dist/assetImports.d.ts",
  "➤ YN0000: dist/assetImports.d.ts.map",
  "➤ YN0000: dist/assetImports.js",
  "➤ YN0000: dist/components/FatalErrorBoundary.d.ts",
  "➤ YN0000: dist/components/FatalErrorBoundary.d.ts.map",
  "➤ YN0000: dist/components/FatalErrorBoundary.js",
  "➤ YN0000: dist/components/FetchConfigProvider.d.ts",
  "➤ YN0000: dist/components/FetchConfigProvider.d.ts.map",
  "➤ YN0000: dist/components/FetchConfigProvider.js",
  "➤ YN0000: dist/components/GraphQLHooksProvider.d.ts",
  "➤ YN0000: dist/components/GraphQLHooksProvider.d.ts.map",
  "➤ YN0000: dist/components/GraphQLHooksProvider.js",
  "➤ YN0000: dist/components/MetaTags.d.ts",
  "➤ YN0000: dist/components/MetaTags.d.ts.map",
  "➤ YN0000: dist/components/MetaTags.js",
  "➤ YN0000: dist/components/RedwoodProvider.d.ts",
  "➤ YN0000: dist/components/RedwoodProvider.d.ts.map",
  "➤ YN0000: dist/components/RedwoodProvider.js",
  "➤ YN0000: dist/components/createCell.d.ts",
  "➤ YN0000: dist/components/createCell.d.ts.map",
  "➤ YN0000: dist/components/createCell.js",
  "➤ YN0000: dist/config.d.ts",
  "➤ YN0000: dist/config.d.ts.map",
  "➤ YN0000: dist/config.js",
  "➤ YN0000: dist/entry/index.js",
  "➤ YN0000: dist/global.web-auto-imports.d.ts",
  "➤ YN0000: dist/global.web-auto-imports.d.ts.map",
  "➤ YN0000: dist/global.web-auto-imports.js",
  "➤ YN0000: dist/index.d.ts",
  "➤ YN0000: dist/index.d.ts.map",
  "➤ YN0000: dist/index.js",
  "➤ YN0000: dist/toast/index.d.ts",
  "➤ YN0000: dist/toast/index.d.ts.map",
  "➤ YN0000: dist/toast/index.js",
  "➤ YN0000: dist/tsconfig.tsbuildinfo",
  "➤ YN0000: package.json",
  "➤ YN0000: toast/index.js",
  "➤ YN0000: toast/package.json",
]
`;
